usb: typec: tcpm: Return ENOTSUPP for power supply prop writes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14010,6 +14010,7 @@
 	patches.suse/kcm-fix-strp_init-order-and-cleanup.patch
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
 	patches.suse/musb-fix-USB_MUSB_TUSB6010-dependency.patch
+	patches.suse/usb-typec-tcpm-Return-ENOTSUPP-for-power-supply-prop.patch
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
