iio: adc: mcp3911: use correct formula for AD conversion (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14019,6 +14019,7 @@
 	patches.suse/usb-cdns3-fix-incorrect-handling-TRB_SMM-flag-for-IS.patch
 	patches.suse/usb-cdns3-fix-issue-with-rearming-ISO-OUT-endpoint.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
+	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
