--- a/series.conf
+++ b/series.conf
@@ -14014,6 +14014,7 @@
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
+	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
