thunderbolt: Use the actual buffer in tb_async_error() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14012,6 +14012,7 @@
 	patches.suse/musb-fix-USB_MUSB_TUSB6010-dependency.patch
 	patches.suse/usb-typec-tcpm-Return-ENOTSUPP-for-power-supply-prop.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
+	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
