--- a/series.conf
+++ b/series.conf
@@ -14023,6 +14023,7 @@
 	patches.suse/iio-ad7292-Prevent-regulator-double-disable.patch
 	patches.suse/misc-fastrpc-fix-memory-corruption-on-probe.patch
 	patches.suse/misc-fastrpc-fix-memory-corruption-on-open.patch
+	patches.suse/soundwire-qcom-fix-device-status-array-range.patch
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
