mmc: core: Fix UHS-I SD 1.8V workaround branch (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14032,6 +14032,7 @@
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 	patches.suse/drm-i915-fix-null-pointer-dereference.patch
+	patches.suse/mmc-core-Fix-UHS-I-SD-1.8V-workaround-branch.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
