Revert "usb: gadget: udc-xilinx: replace memcpy with memcpy_toio" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14018,6 +14018,7 @@
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
 	patches.suse/usb-cdns3-fix-incorrect-handling-TRB_SMM-flag-for-IS.patch
 	patches.suse/usb-cdns3-fix-issue-with-rearming-ISO-OUT-endpoint.patch
+	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
 	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
 	patches.suse/iio-ad7292-Prevent-regulator-double-disable.patch
