--- a/series.conf
+++ b/series.conf
@@ -14112,6 +14112,7 @@
 	patches.suse/drm-udl-Don-t-re-initialize-stuff-at-retrying-the-UR.patch
 	patches.suse/drm-udl-Sync-pending-URBs-at-the-end-of-suspend.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
+	patches.suse/ALSA-hda-sigmatel-Keep-power-up-while-beep-is-enable.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
