tty: n_gsm: avoid call of sleeping functions from atomic context (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14065,6 +14065,7 @@
 	patches.suse/tty-n_gsm-add-sanity-check-for-gsm-receive-in-gsm_re.patch
 	patches.suse/tty-n_gsm-initialize-more-members-at-gsm_alloc_mux.patch
 	patches.suse/tty-n_gsm-replace-kicktimer-with-delayed_work.patch
+	patches.suse/tty-n_gsm-avoid-call-of-sleeping-functions-from-atom.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
