tty: n_gsm: initialize more members at gsm_alloc_mux() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14063,6 +14063,7 @@
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
 	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
 	patches.suse/tty-n_gsm-add-sanity-check-for-gsm-receive-in-gsm_re.patch
+	patches.suse/tty-n_gsm-initialize-more-members-at-gsm_alloc_mux.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
