--- a/series.conf
+++ b/series.conf
@@ -14066,6 +14066,7 @@
 	patches.suse/tty-n_gsm-initialize-more-members-at-gsm_alloc_mux.patch
 	patches.suse/tty-n_gsm-replace-kicktimer-with-delayed_work.patch
 	patches.suse/tty-n_gsm-avoid-call-of-sleeping-functions-from-atom.patch
+	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
