tty: n_gsm: add sanity check for gsm->receive in gsm_receive_buf() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14062,6 +14062,7 @@
 	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
 	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
+	patches.suse/tty-n_gsm-add-sanity-check-for-gsm-receive-in-gsm_re.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
