--- a/series.conf
+++ b/series.conf
@@ -14055,6 +14055,7 @@
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 	patches.suse/drm-i915-fix-null-pointer-dereference.patch
 	patches.suse/mmc-core-Fix-UHS-I-SD-1.8V-workaround-branch.patch
+	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
