tty: serial: lpuart: disable flow control while waiting for the transmit engine to complete (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14061,6 +14061,7 @@
 	patches.suse/clk-bcm-rpi-Fix-error-handling-of-raspberrypi_fw_get.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
+	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
