--- a/series.conf
+++ b/series.conf
@@ -14056,6 +14056,7 @@
 	patches.suse/drm-i915-fix-null-pointer-dereference.patch
 	patches.suse/mmc-core-Fix-UHS-I-SD-1.8V-workaround-branch.patch
 	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
+	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
