--- a/series.conf
+++ b/series.conf
@@ -14067,6 +14067,7 @@
 	patches.suse/tty-n_gsm-replace-kicktimer-with-delayed_work.patch
 	patches.suse/tty-n_gsm-avoid-call-of-sleeping-functions-from-atom.patch
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
+	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
