Revert "clk: core: Honor CLK_OPS_PARENT_ENABLE for clk gate ops" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14059,6 +14059,7 @@
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
 	patches.suse/clk-core-Fix-runtime-PM-sequence-in-clk_core_unprepa.patch
 	patches.suse/clk-bcm-rpi-Fix-error-handling-of-raspberrypi_fw_get.patch
+	patches.suse/Revert-clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
 	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
