mm/rmap: Fix anon_vma->degree ambiguity leading to double-reuse (git-fixes, bsc#1203098). kABI: Fix kABI after "mm/rmap: Fix anon_vma->degree ambiguity leading to double-reuse" (git-fixes, bsc#1203098).

--- a/series.conf
+++ b/series.conf
@@ -22945,6 +22945,7 @@
 	patches.suse/net_sched-cls_route-remove-from-list-when-handle-is-.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
+	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 
 	########################################################
 	# end of sorted patches
@@ -23522,6 +23523,7 @@
 	patches.kabi/sctp-handle-kabi-change-in-struct-sctp_endpoint.patch
 	patches.kabi/sysfs-Add-sysfs_emit-and-sysfs_emit_at-to-format-sys-kabi-workaround.patch
 	patches.kabi/af-unix-kabi-change-in-struct-sock.patch
+	patches.kabi/kABI-Fix-kABI-after-mm-rmap-Fix-anon_vma-degree-ambi.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
