--- a/series.conf
+++ b/series.conf
@@ -1804,6 +1804,7 @@
 	patches.kernel.org/5.19.7-062-netfilter-conntrack-NF_CONNTRACK_PROCFS-should.patch
 	patches.kernel.org/5.19.7-063-testing-selftests-nft_flowtable.sh-use-random-.patch
 	patches.kernel.org/5.19.7-064-platform-x86-serial-multi-instantiate-Add-CLSA.patch
+	patches.kernel.org/5.19.7-065-ALSA-hda-cs8409-Support-new-Dolphin-Variants.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
