mmc: sdhci-of-dwcmshc: rename rk3568 to rk35xx (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1769,6 +1769,7 @@
 	patches.kernel.org/5.19.7-027-HID-intel-ish-hid-ipc-Add-Meteor-Lake-PCI-devi.patch
 	patches.kernel.org/5.19.7-028-mmc-mtk-sd-Clear-interrupts-when-cqe-off-disab.patch
 	patches.kernel.org/5.19.7-029-mmc-sdhci-of-dwcmshc-add-reset-call-back-for-r.patch
+	patches.kernel.org/5.19.7-030-mmc-sdhci-of-dwcmshc-rename-rk3568-to-rk35xx.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
