ALSA: hda/realtek: Add quirks for ASUS Zenbooks using CS35L41 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1788,6 +1788,7 @@
 	patches.kernel.org/5.19.7-046-ksmbd-return-STATUS_BAD_NETWORK_NAME-error-sta.patch
 	patches.kernel.org/5.19.7-047-net-lan966x-fix-checking-for-return-value-of-p.patch
 	patches.kernel.org/5.19.7-048-neigh-fix-possible-DoS-due-to-net-iface-start-.patch
+	patches.kernel.org/5.19.7-049-ALSA-hda-realtek-Add-quirks-for-ASUS-Zenbooks-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
