--- a/series.conf
+++ b/series.conf
@@ -1746,6 +1746,7 @@
 	patches.kernel.org/5.19.7-004-crypto-lib-remove-unneeded-selection-of-XOR_BL.patch
 	patches.kernel.org/5.19.7-005-docs-kerneldoc-preamble-Test-xeCJK.sty-before-.patch
 	patches.kernel.org/5.19.7-006-arm64-errata-Add-Cortex-A510-to-the-repeat-tlb.patch
+	patches.kernel.org/5.19.7-007-Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
