drm/amd/display: Fix HDMI VSIF V3 incorrect issue (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1778,6 +1778,7 @@
 	patches.kernel.org/5.19.7-036-drm-amd-display-Add-a-missing-register-field-f.patch
 	patches.kernel.org/5.19.7-037-drm-amd-display-Device-flash-garbage-before-ge.patch
 	patches.kernel.org/5.19.7-038-drm-amd-display-Avoid-MPC-infinite-loop.patch
+	patches.kernel.org/5.19.7-039-drm-amd-display-Fix-HDMI-VSIF-V3-incorrect-iss.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
