ASoC: sh: rz-ssi: Improve error handling in rz_ssi_probe() error path (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1772,6 +1772,7 @@
 	patches.kernel.org/5.19.7-030-mmc-sdhci-of-dwcmshc-rename-rk3568-to-rk35xx.patch
 	patches.kernel.org/5.19.7-031-mmc-sdhci-of-dwcmshc-Re-enable-support-for-the.patch
 	patches.kernel.org/5.19.7-032-fs-ntfs3-Fix-work-with-fragmented-xattr.patch
+	patches.kernel.org/5.19.7-033-ASoC-sh-rz-ssi-Improve-error-handling-in-rz_ss.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
