--- a/series.conf
+++ b/series.conf
@@ -1748,6 +1748,7 @@
 	patches.kernel.org/5.19.7-006-arm64-errata-Add-Cortex-A510-to-the-repeat-tlb.patch
 	patches.kernel.org/5.19.7-007-Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.kernel.org/5.19.7-008-Revert-PCI-portdrv-Don-t-disable-AER-reporting.patch
+	patches.kernel.org/5.19.7-009-HID-steam-Prevent-NULL-pointer-dereference-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
