net/af_packet: check len when min_header_len equals to 0 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1809,6 +1809,7 @@
 	patches.kernel.org/5.19.7-067-btrfs-fix-lockdep-splat-with-reloc-root-extent.patch
 	patches.kernel.org/5.19.7-068-btrfs-tree-checker-check-for-overlapping-exten.patch
 	patches.kernel.org/5.19.7-069-android-binder-fix-lockdep-check-on-clearing-v.patch
+	patches.kernel.org/5.19.7-070-net-af_packet-check-len-when-min_header_len-eq.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
