arm64: cacheinfo: Fix incorrect assignment of signed error value to unsigned fw_level (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1811,6 +1811,7 @@
 	patches.kernel.org/5.19.7-069-android-binder-fix-lockdep-check-on-clearing-v.patch
 	patches.kernel.org/5.19.7-070-net-af_packet-check-len-when-min_header_len-eq.patch
 	patches.kernel.org/5.19.7-071-net-neigh-don-t-call-kfree_skb-under-spin_lock.patch
+	patches.kernel.org/5.19.7-072-arm64-cacheinfo-Fix-incorrect-assignment-of-si.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
