drm/amdgpu: Increase tlb flush timeout for sriov (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1795,6 +1795,7 @@
 	patches.kernel.org/5.19.7-053-drm-amd-pm-add-missing-fini_microcode-interfac.patch
 	patches.kernel.org/5.19.7-054-drm-amd-pm-add-missing-fini_xxxx-interfaces-fo.patch
 	patches.kernel.org/5.19.7-055-drm-amd-display-Fix-pixel-clock-programming.patch
+	patches.kernel.org/5.19.7-056-drm-amdgpu-Increase-tlb-flush-timeout-for-srio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
