--- a/series.conf
+++ b/series.conf
@@ -1762,6 +1762,7 @@
 	patches.kernel.org/5.19.7-020-HID-input-fix-uclogic-tablets.patch
 	patches.kernel.org/5.19.7-021-HID-add-Lenovo-Yoga-C630-battery-quirk.patch
 	patches.kernel.org/5.19.7-022-HID-AMD_SFH-Add-a-DMI-quirk-entry-for-Chromebo.patch
+	patches.kernel.org/5.19.7-023-HID-Add-Apple-Touchbar-on-T2-Macs-in-hid_have_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
