drm/amd/display: avoid doing vm_init multiple time (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1797,6 +1797,7 @@
 	patches.kernel.org/5.19.7-055-drm-amd-display-Fix-pixel-clock-programming.patch
 	patches.kernel.org/5.19.7-056-drm-amdgpu-Increase-tlb-flush-timeout-for-srio.patch
 	patches.kernel.org/5.19.7-057-drm-amd-display-Fix-plug-unplug-external-monit.patch
+	patches.kernel.org/5.19.7-058-drm-amd-display-avoid-doing-vm_init-multiple-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
