neigh: fix possible DoS due to net iface start/stop loop (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1787,6 +1787,7 @@
 	patches.kernel.org/5.19.7-045-drm-amd-pm-Fix-a-potential-gpu_metrics_table-m.patch
 	patches.kernel.org/5.19.7-046-ksmbd-return-STATUS_BAD_NETWORK_NAME-error-sta.patch
 	patches.kernel.org/5.19.7-047-net-lan966x-fix-checking-for-return-value-of-p.patch
+	patches.kernel.org/5.19.7-048-neigh-fix-possible-DoS-due-to-net-iface-start-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
