--- a/series.conf
+++ b/series.conf
@@ -1792,6 +1792,7 @@
 	patches.kernel.org/5.19.7-050-s390-hypfs-avoid-error-message-under-KVM.patch
 	patches.kernel.org/5.19.7-051-ksmbd-don-t-remove-dos-attribute-xattr-on-O_TR.patch
 	patches.kernel.org/5.19.7-052-drm-amdgpu-disable-3DCGCG-CGLS-temporarily-due.patch
+	patches.kernel.org/5.19.7-053-drm-amd-pm-add-missing-fini_microcode-interfac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
