--- a/series.conf
+++ b/series.conf
@@ -1802,6 +1802,7 @@
 	patches.kernel.org/5.19.7-060-drm-amdgpu-Add-secure-display-TA-load-for-Reno.patch
 	patches.kernel.org/5.19.7-061-drm-amdgpu-Fix-interrupt-handling-on-ih_soft-r.patch
 	patches.kernel.org/5.19.7-062-netfilter-conntrack-NF_CONNTRACK_PROCFS-should.patch
+	patches.kernel.org/5.19.7-063-testing-selftests-nft_flowtable.sh-use-random-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
