--- a/series.conf
+++ b/series.conf
@@ -1741,6 +1741,7 @@
 	patches.kernel.org/5.19.6-158-bpf-Don-t-use-tnum_range-on-array-range-checki.patch
 	patches.kernel.org/5.19.6-159-Linux-5.19.6.patch
 	patches.kernel.org/5.19.7-001-drm-vc4-hdmi-Rework-power-up.patch
+	patches.kernel.org/5.19.7-002-drm-vc4-hdmi-Depends-on-CONFIG_PM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
