--- a/series.conf
+++ b/series.conf
@@ -1773,6 +1773,7 @@
 	patches.kernel.org/5.19.7-031-mmc-sdhci-of-dwcmshc-Re-enable-support-for-the.patch
 	patches.kernel.org/5.19.7-032-fs-ntfs3-Fix-work-with-fragmented-xattr.patch
 	patches.kernel.org/5.19.7-033-ASoC-sh-rz-ssi-Improve-error-handling-in-rz_ss.patch
+	patches.kernel.org/5.19.7-034-ASoC-rt5640-Fix-the-JD-voltage-dropping-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
