--- a/series.conf
+++ b/series.conf
@@ -1770,6 +1770,7 @@
 	patches.kernel.org/5.19.7-028-mmc-mtk-sd-Clear-interrupts-when-cqe-off-disab.patch
 	patches.kernel.org/5.19.7-029-mmc-sdhci-of-dwcmshc-add-reset-call-back-for-r.patch
 	patches.kernel.org/5.19.7-030-mmc-sdhci-of-dwcmshc-rename-rk3568-to-rk35xx.patch
+	patches.kernel.org/5.19.7-031-mmc-sdhci-of-dwcmshc-Re-enable-support-for-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
