drm/amd/pm: add missing ->fini_xxxx interfaces for some SMU13 asics (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1793,6 +1793,7 @@
 	patches.kernel.org/5.19.7-051-ksmbd-don-t-remove-dos-attribute-xattr-on-O_TR.patch
 	patches.kernel.org/5.19.7-052-drm-amdgpu-disable-3DCGCG-CGLS-temporarily-due.patch
 	patches.kernel.org/5.19.7-053-drm-amd-pm-add-missing-fini_microcode-interfac.patch
+	patches.kernel.org/5.19.7-054-drm-amd-pm-add-missing-fini_xxxx-interfaces-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
