HID: AMD_SFH: Add a DMI quirk entry for Chromebooks (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1761,6 +1761,7 @@
 	patches.kernel.org/5.19.7-019-ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-.patch
 	patches.kernel.org/5.19.7-020-HID-input-fix-uclogic-tablets.patch
 	patches.kernel.org/5.19.7-021-HID-add-Lenovo-Yoga-C630-battery-quirk.patch
+	patches.kernel.org/5.19.7-022-HID-AMD_SFH-Add-a-DMI-quirk-entry-for-Chromebo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
