drm/amd/display: Fix TDR eDP and USB4 display light up issue (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1781,6 +1781,7 @@
 	patches.kernel.org/5.19.7-039-drm-amd-display-Fix-HDMI-VSIF-V3-incorrect-iss.patch
 	patches.kernel.org/5.19.7-040-drm-amd-display-For-stereo-keep-FLIP_ANY_FRAME.patch
 	patches.kernel.org/5.19.7-041-drm-amd-display-clear-optc-underflow-before-tu.patch
+	patches.kernel.org/5.19.7-042-drm-amd-display-Fix-TDR-eDP-and-USB4-display-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
