--- a/series.conf
+++ b/series.conf
@@ -1777,6 +1777,7 @@
 	patches.kernel.org/5.19.7-035-rtla-Fix-tracer-name.patch
 	patches.kernel.org/5.19.7-036-drm-amd-display-Add-a-missing-register-field-f.patch
 	patches.kernel.org/5.19.7-037-drm-amd-display-Device-flash-garbage-before-ge.patch
+	patches.kernel.org/5.19.7-038-drm-amd-display-Avoid-MPC-infinite-loop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
