--- a/series.conf
+++ b/series.conf
@@ -1812,6 +1812,7 @@
 	patches.kernel.org/5.19.7-070-net-af_packet-check-len-when-min_header_len-eq.patch
 	patches.kernel.org/5.19.7-071-net-neigh-don-t-call-kfree_skb-under-spin_lock.patch
 	patches.kernel.org/5.19.7-072-arm64-cacheinfo-Fix-incorrect-assignment-of-si.patch
+	patches.kernel.org/5.19.7-073-Linux-5.19.7.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
