--- a/series.conf
+++ b/series.conf
@@ -1758,6 +1758,7 @@
 	patches.kernel.org/5.19.7-016-ftrace-Fix-NULL-pointer-dereference-in-is_ftra.patch
 	patches.kernel.org/5.19.7-017-bpf-Don-t-redirect-packets-with-invalid-pkt_le.patch
 	patches.kernel.org/5.19.7-018-mm-rmap-Fix-anon_vma-degree-ambiguity-leading-.patch
+	patches.kernel.org/5.19.7-019-ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
