--- a/series.conf
+++ b/series.conf
@@ -1779,6 +1779,7 @@
 	patches.kernel.org/5.19.7-037-drm-amd-display-Device-flash-garbage-before-ge.patch
 	patches.kernel.org/5.19.7-038-drm-amd-display-Avoid-MPC-infinite-loop.patch
 	patches.kernel.org/5.19.7-039-drm-amd-display-Fix-HDMI-VSIF-V3-incorrect-iss.patch
+	patches.kernel.org/5.19.7-040-drm-amd-display-For-stereo-keep-FLIP_ANY_FRAME.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
