--- a/series.conf
+++ b/series.conf
@@ -1800,6 +1800,7 @@
 	patches.kernel.org/5.19.7-058-drm-amd-display-avoid-doing-vm_init-multiple-t.patch
 	patches.kernel.org/5.19.7-059-drm-amdgpu-Add-decode_iv_ts-helper-for-ih_v6-b.patch
 	patches.kernel.org/5.19.7-060-drm-amdgpu-Add-secure-display-TA-load-for-Reno.patch
+	patches.kernel.org/5.19.7-061-drm-amdgpu-Fix-interrupt-handling-on-ih_soft-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
