--- a/series.conf
+++ b/series.conf
@@ -1764,6 +1764,7 @@
 	patches.kernel.org/5.19.7-022-HID-AMD_SFH-Add-a-DMI-quirk-entry-for-Chromebo.patch
 	patches.kernel.org/5.19.7-023-HID-Add-Apple-Touchbar-on-T2-Macs-in-hid_have_.patch
 	patches.kernel.org/5.19.7-024-HID-asus-ROG-NKey-Ignore-portion-of-0x5a-repor.patch
+	patches.kernel.org/5.19.7-025-HID-nintendo-fix-rumble-worker-null-pointer-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
