--- a/series.conf
+++ b/series.conf
@@ -1789,6 +1789,7 @@
 	patches.kernel.org/5.19.7-047-net-lan966x-fix-checking-for-return-value-of-p.patch
 	patches.kernel.org/5.19.7-048-neigh-fix-possible-DoS-due-to-net-iface-start-.patch
 	patches.kernel.org/5.19.7-049-ALSA-hda-realtek-Add-quirks-for-ASUS-Zenbooks-.patch
+	patches.kernel.org/5.19.7-050-s390-hypfs-avoid-error-message-under-KVM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
