--- a/series.conf
+++ b/series.conf
@@ -1755,6 +1755,7 @@
 	patches.kernel.org/5.19.7-013-HID-hidraw-fix-memory-leak-in-hidraw_release.patch
 	patches.kernel.org/5.19.7-014-net-fix-refcount-bug-in-sk_psock_get-2.patch
 	patches.kernel.org/5.19.7-015-fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-.patch
+	patches.kernel.org/5.19.7-016-ftrace-Fix-NULL-pointer-dereference-in-is_ftra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
