drm/amdgpu: disable 3DCGCG/CGLS temporarily due to stability issue (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1791,6 +1791,7 @@
 	patches.kernel.org/5.19.7-049-ALSA-hda-realtek-Add-quirks-for-ASUS-Zenbooks-.patch
 	patches.kernel.org/5.19.7-050-s390-hypfs-avoid-error-message-under-KVM.patch
 	patches.kernel.org/5.19.7-051-ksmbd-don-t-remove-dos-attribute-xattr-on-O_TR.patch
+	patches.kernel.org/5.19.7-052-drm-amdgpu-disable-3DCGCG-CGLS-temporarily-due.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
