HID: input: fix uclogic tablets (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1759,6 +1759,7 @@
 	patches.kernel.org/5.19.7-017-bpf-Don-t-redirect-packets-with-invalid-pkt_le.patch
 	patches.kernel.org/5.19.7-018-mm-rmap-Fix-anon_vma-degree-ambiguity-leading-.patch
 	patches.kernel.org/5.19.7-019-ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-.patch
+	patches.kernel.org/5.19.7-020-HID-input-fix-uclogic-tablets.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
