--- a/series.conf
+++ b/series.conf
@@ -1750,6 +1750,7 @@
 	patches.kernel.org/5.19.7-008-Revert-PCI-portdrv-Don-t-disable-AER-reporting.patch
 	patches.kernel.org/5.19.7-009-HID-steam-Prevent-NULL-pointer-dereference-in-.patch
 	patches.kernel.org/5.19.7-010-udmabuf-Set-the-DMA-mask-for-the-udmabuf-devic.patch
+	patches.kernel.org/5.19.7-011-media-pvrusb2-fix-memory-leak-in-pvr_probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
