drm/amd/pm: Fix a potential gpu_metrics_table memory leak (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1784,6 +1784,7 @@
 	patches.kernel.org/5.19.7-042-drm-amd-display-Fix-TDR-eDP-and-USB4-display-l.patch
 	patches.kernel.org/5.19.7-043-drm-amd-pm-skip-pptable-override-for-smu_v13_0.patch
 	patches.kernel.org/5.19.7-044-drm-amdkfd-Handle-restart-of-kfd_ioctl_wait_ev.patch
+	patches.kernel.org/5.19.7-045-drm-amd-pm-Fix-a-potential-gpu_metrics_table-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
