--- a/series.conf
+++ b/series.conf
@@ -1810,6 +1810,7 @@
 	patches.kernel.org/5.19.7-068-btrfs-tree-checker-check-for-overlapping-exten.patch
 	patches.kernel.org/5.19.7-069-android-binder-fix-lockdep-check-on-clearing-v.patch
 	patches.kernel.org/5.19.7-070-net-af_packet-check-len-when-min_header_len-eq.patch
+	patches.kernel.org/5.19.7-071-net-neigh-don-t-call-kfree_skb-under-spin_lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
