udmabuf: Set the DMA mask for the udmabuf device (v2) (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1749,6 +1749,7 @@
 	patches.kernel.org/5.19.7-007-Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.kernel.org/5.19.7-008-Revert-PCI-portdrv-Don-t-disable-AER-reporting.patch
 	patches.kernel.org/5.19.7-009-HID-steam-Prevent-NULL-pointer-dereference-in-.patch
+	patches.kernel.org/5.19.7-010-udmabuf-Set-the-DMA-mask-for-the-udmabuf-devic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
