--- a/series.conf
+++ b/series.conf
@@ -1796,6 +1796,7 @@
 	patches.kernel.org/5.19.7-054-drm-amd-pm-add-missing-fini_xxxx-interfaces-fo.patch
 	patches.kernel.org/5.19.7-055-drm-amd-display-Fix-pixel-clock-programming.patch
 	patches.kernel.org/5.19.7-056-drm-amdgpu-Increase-tlb-flush-timeout-for-srio.patch
+	patches.kernel.org/5.19.7-057-drm-amd-display-Fix-plug-unplug-external-monit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
