crypto: lib - remove unneeded selection of XOR_BLOCKS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1743,6 +1743,7 @@
 	patches.kernel.org/5.19.7-001-drm-vc4-hdmi-Rework-power-up.patch
 	patches.kernel.org/5.19.7-002-drm-vc4-hdmi-Depends-on-CONFIG_PM.patch
 	patches.kernel.org/5.19.7-003-firmware-tegra-bpmp-Do-only-aligned-access-to-.patch
+	patches.kernel.org/5.19.7-004-crypto-lib-remove-unneeded-selection-of-XOR_BL.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
