Revert "PCI/portdrv: Don't disable AER reporting in get_port_device_capability()" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1747,6 +1747,7 @@
 	patches.kernel.org/5.19.7-005-docs-kerneldoc-preamble-Test-xeCJK.sty-before-.patch
 	patches.kernel.org/5.19.7-006-arm64-errata-Add-Cortex-A510-to-the-repeat-tlb.patch
 	patches.kernel.org/5.19.7-007-Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
+	patches.kernel.org/5.19.7-008-Revert-PCI-portdrv-Don-t-disable-AER-reporting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
