--- a/series.conf
+++ b/series.conf
@@ -1783,6 +1783,7 @@
 	patches.kernel.org/5.19.7-041-drm-amd-display-clear-optc-underflow-before-tu.patch
 	patches.kernel.org/5.19.7-042-drm-amd-display-Fix-TDR-eDP-and-USB4-display-l.patch
 	patches.kernel.org/5.19.7-043-drm-amd-pm-skip-pptable-override-for-smu_v13_0.patch
+	patches.kernel.org/5.19.7-044-drm-amdkfd-Handle-restart-of-kfd_ioctl_wait_ev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
