--- a/series.conf
+++ b/series.conf
@@ -1771,6 +1771,7 @@
 	patches.kernel.org/5.19.7-029-mmc-sdhci-of-dwcmshc-add-reset-call-back-for-r.patch
 	patches.kernel.org/5.19.7-030-mmc-sdhci-of-dwcmshc-rename-rk3568-to-rk35xx.patch
 	patches.kernel.org/5.19.7-031-mmc-sdhci-of-dwcmshc-Re-enable-support-for-the.patch
+	patches.kernel.org/5.19.7-032-fs-ntfs3-Fix-work-with-fragmented-xattr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
