netfilter: conntrack: NF_CONNTRACK_PROCFS should no longer default to y (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1801,6 +1801,7 @@
 	patches.kernel.org/5.19.7-059-drm-amdgpu-Add-decode_iv_ts-helper-for-ih_v6-b.patch
 	patches.kernel.org/5.19.7-060-drm-amdgpu-Add-secure-display-TA-load-for-Reno.patch
 	patches.kernel.org/5.19.7-061-drm-amdgpu-Fix-interrupt-handling-on-ih_soft-r.patch
+	patches.kernel.org/5.19.7-062-netfilter-conntrack-NF_CONNTRACK_PROCFS-should.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
