--- a/series.conf
+++ b/series.conf
@@ -1786,6 +1786,7 @@
 	patches.kernel.org/5.19.7-044-drm-amdkfd-Handle-restart-of-kfd_ioctl_wait_ev.patch
 	patches.kernel.org/5.19.7-045-drm-amd-pm-Fix-a-potential-gpu_metrics_table-m.patch
 	patches.kernel.org/5.19.7-046-ksmbd-return-STATUS_BAD_NETWORK_NAME-error-sta.patch
+	patches.kernel.org/5.19.7-047-net-lan966x-fix-checking-for-return-value-of-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
