--- a/series.conf
+++ b/series.conf
@@ -1752,6 +1752,7 @@
 	patches.kernel.org/5.19.7-010-udmabuf-Set-the-DMA-mask-for-the-udmabuf-devic.patch
 	patches.kernel.org/5.19.7-011-media-pvrusb2-fix-memory-leak-in-pvr_probe.patch
 	patches.kernel.org/5.19.7-012-USB-gadget-Fix-use-after-free-Read-in-usb_udc_.patch
+	patches.kernel.org/5.19.7-013-HID-hidraw-fix-memory-leak-in-hidraw_release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
