--- a/series.conf
+++ b/series.conf
@@ -1794,6 +1794,7 @@
 	patches.kernel.org/5.19.7-052-drm-amdgpu-disable-3DCGCG-CGLS-temporarily-due.patch
 	patches.kernel.org/5.19.7-053-drm-amd-pm-add-missing-fini_microcode-interfac.patch
 	patches.kernel.org/5.19.7-054-drm-amd-pm-add-missing-fini_xxxx-interfaces-fo.patch
+	patches.kernel.org/5.19.7-055-drm-amd-display-Fix-pixel-clock-programming.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
