--- a/series.conf
+++ b/series.conf
@@ -1767,6 +1767,7 @@
 	patches.kernel.org/5.19.7-025-HID-nintendo-fix-rumble-worker-null-pointer-de.patch
 	patches.kernel.org/5.19.7-026-HID-thrustmaster-Add-sparco-wheel-and-fix-arra.patch
 	patches.kernel.org/5.19.7-027-HID-intel-ish-hid-ipc-Add-Meteor-Lake-PCI-devi.patch
+	patches.kernel.org/5.19.7-028-mmc-mtk-sd-Clear-interrupts-when-cqe-off-disab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
