USB: gadget: Fix use-after-free Read in usb_udc_uevent() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1751,6 +1751,7 @@
 	patches.kernel.org/5.19.7-009-HID-steam-Prevent-NULL-pointer-dereference-in-.patch
 	patches.kernel.org/5.19.7-010-udmabuf-Set-the-DMA-mask-for-the-udmabuf-devic.patch
 	patches.kernel.org/5.19.7-011-media-pvrusb2-fix-memory-leak-in-pvr_probe.patch
+	patches.kernel.org/5.19.7-012-USB-gadget-Fix-use-after-free-Read-in-usb_udc_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
