drm/amd/display: clear optc underflow before turn off odm clock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1780,6 +1780,7 @@
 	patches.kernel.org/5.19.7-038-drm-amd-display-Avoid-MPC-infinite-loop.patch
 	patches.kernel.org/5.19.7-039-drm-amd-display-Fix-HDMI-VSIF-V3-incorrect-iss.patch
 	patches.kernel.org/5.19.7-040-drm-amd-display-For-stereo-keep-FLIP_ANY_FRAME.patch
+	patches.kernel.org/5.19.7-041-drm-amd-display-clear-optc-underflow-before-tu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
