rtla: Fix tracer name (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1774,6 +1774,7 @@
 	patches.kernel.org/5.19.7-032-fs-ntfs3-Fix-work-with-fragmented-xattr.patch
 	patches.kernel.org/5.19.7-033-ASoC-sh-rz-ssi-Improve-error-handling-in-rz_ss.patch
 	patches.kernel.org/5.19.7-034-ASoC-rt5640-Fix-the-JD-voltage-dropping-issue.patch
+	patches.kernel.org/5.19.7-035-rtla-Fix-tracer-name.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
