--- a/series.conf
+++ b/series.conf
@@ -1754,6 +1754,7 @@
 	patches.kernel.org/5.19.7-012-USB-gadget-Fix-use-after-free-Read-in-usb_udc_.patch
 	patches.kernel.org/5.19.7-013-HID-hidraw-fix-memory-leak-in-hidraw_release.patch
 	patches.kernel.org/5.19.7-014-net-fix-refcount-bug-in-sk_psock_get-2.patch
+	patches.kernel.org/5.19.7-015-fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
