mm/rmap: Fix anon_vma->degree ambiguity leading to double-reuse (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1757,6 +1757,7 @@
 	patches.kernel.org/5.19.7-015-fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-.patch
 	patches.kernel.org/5.19.7-016-ftrace-Fix-NULL-pointer-dereference-in-is_ftra.patch
 	patches.kernel.org/5.19.7-017-bpf-Don-t-redirect-packets-with-invalid-pkt_le.patch
+	patches.kernel.org/5.19.7-018-mm-rmap-Fix-anon_vma-degree-ambiguity-leading-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
