drm/vc4: hdmi: Rework power up (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1740,6 +1740,7 @@
 	patches.kernel.org/5.19.6-157-riscv-dts-microchip-mpfs-remove-pci-axi-addres.patch
 	patches.kernel.org/5.19.6-158-bpf-Don-t-use-tnum_range-on-array-range-checki.patch
 	patches.kernel.org/5.19.6-159-Linux-5.19.6.patch
+	patches.kernel.org/5.19.7-001-drm-vc4-hdmi-Rework-power-up.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
