--- a/series.conf
+++ b/series.conf
@@ -1760,6 +1760,7 @@
 	patches.kernel.org/5.19.7-018-mm-rmap-Fix-anon_vma-degree-ambiguity-leading-.patch
 	patches.kernel.org/5.19.7-019-ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-.patch
 	patches.kernel.org/5.19.7-020-HID-input-fix-uclogic-tablets.patch
+	patches.kernel.org/5.19.7-021-HID-add-Lenovo-Yoga-C630-battery-quirk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
