- arm64: errata: Add Cortex-A510 to the repeat tlbi list   (bsc#1012628). - Update config files.   Set CONFIG_ARM64_ERRATUM_2441009=y as per default.

--- a/series.conf
+++ b/series.conf
@@ -1745,6 +1745,7 @@
 	patches.kernel.org/5.19.7-003-firmware-tegra-bpmp-Do-only-aligned-access-to-.patch
 	patches.kernel.org/5.19.7-004-crypto-lib-remove-unneeded-selection-of-XOR_BL.patch
 	patches.kernel.org/5.19.7-005-docs-kerneldoc-preamble-Test-xeCJK.sty-before-.patch
+	patches.kernel.org/5.19.7-006-arm64-errata-Add-Cortex-A510-to-the-repeat-tlb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
