ksmbd: return STATUS_BAD_NETWORK_NAME error status if share is not configured (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1785,6 +1785,7 @@
 	patches.kernel.org/5.19.7-043-drm-amd-pm-skip-pptable-override-for-smu_v13_0.patch
 	patches.kernel.org/5.19.7-044-drm-amdkfd-Handle-restart-of-kfd_ioctl_wait_ev.patch
 	patches.kernel.org/5.19.7-045-drm-amd-pm-Fix-a-potential-gpu_metrics_table-m.patch
+	patches.kernel.org/5.19.7-046-ksmbd-return-STATUS_BAD_NETWORK_NAME-error-sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
