--- a/series.conf
+++ b/series.conf
@@ -1806,6 +1806,7 @@
 	patches.kernel.org/5.19.7-064-platform-x86-serial-multi-instantiate-Add-CLSA.patch
 	patches.kernel.org/5.19.7-065-ALSA-hda-cs8409-Support-new-Dolphin-Variants.patch
 	patches.kernel.org/5.19.7-066-btrfs-move-lockdep-class-helpers-to-locking.c.patch
+	patches.kernel.org/5.19.7-067-btrfs-fix-lockdep-splat-with-reloc-root-extent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
