Revert "btrfs: check if root is readonly while setting security xattr" (bsc#1203114).

--- a/series.conf
+++ b/series.conf
@@ -1871,6 +1871,7 @@
 	########################################################
 	patches.suse/Revert-usb-typec-ucsi-add-a-common-function-ucsi_unr.patch
 	patches.suse/mt76-mt7921e-fix-crash-in-chip-reset-fail.patch
+	patches.suse/Revert-btrfs-check-if-root-is-readonly-while-setting.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
