--- a/series.conf
+++ b/series.conf
@@ -8480,6 +8480,7 @@
 	patches.suse/iwlwifi-mvm-Use-div_s64-instead-of-do_div-in-iwl_mvm.patch
 	patches.suse/bnxt_en-use-firmware-provided-max-timeout-for-messag.patch
 	patches.suse/vmxnet3-Remove-useless-DMA-32-fallback-configuration.patch
+	patches.suse/be2net-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/can-gs_usb-fix-use-of-uninitialized-variable-detach-.patch
 	patches.suse/can-isotp-convert-struct-tpcon-idx-len-to-unsigned-i.patch
 	patches.suse/ppp-ensure-minimum-packet-size-in-ppp_write.patch
