eth: benet: remove a copy of the NAPI_POLL_WEIGHT define (jsc#PED-1497).

--- a/series.conf
+++ b/series.conf
@@ -12117,6 +12117,7 @@
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
+	patches.suse/eth-benet-remove-a-copy-of-the-NAPI_POLL_WEIGHT-defi.patch
 	patches.suse/net-ieee802154-ca8210-Fix-lifs-sifs-periods.patch
 	patches.suse/octeontx2-af-debugfs-fix-error-return-of-allocations.patch
 	patches.suse/ath11k-acquire-ab-base_lock-in-unassign-when-finding.patch
