--- a/series.conf
+++ b/series.conf
@@ -8814,6 +8814,7 @@
 	patches.suse/clk-qcom-gcc-sc7280-Mark-gcc_cfg_noc_lpass_clk-alway.patch
 	patches.suse/clk-bm1880-remove-kfrees-on-static-allocations.patch
 	patches.suse/genirq-Provide-new-interfaces-for-affinity-hints.patch
+	patches.suse/be2net-Use-irq_update_affinity_hint.patch
 	patches.suse/scsi-lpfc-Use-irq_set_affinity.patch
 	patches.suse/irqchip-gic-v4-Disable-redistributors-view-of-the-VP.patch
 	patches.suse/clocksource-drivers-exynos_mct-Refactor-resources-al.patch
