ethernet: constify references to netdev->dev_addr in drivers (jsc#PED-1497).

--- a/series.conf
+++ b/series.conf
@@ -5376,6 +5376,7 @@
 	patches.suse/ice-Implement-functions-for-reading-and-setting-GPIO.patch
 	patches.suse/ice-Add-support-for-SMA-control-multiplexer.patch
 	patches.suse/ice-Implement-support-for-SMA-and-U.FL-on-E810-T.patch
+	patches.suse/ethernet-constify-references-to-netdev-dev_addr-in-d.patch
 	patches.suse/net-phy-micrel-make-skew-ps-check-more-lenient.patch
 	patches.suse/msft-hv-2454-hv_netvsc-Add-comment-of-netvsc_xdp_xmit.patch
 	patches.suse/net-fealnx-fix-build-for-UML.patch
