--- a/series.conf
+++ b/series.conf
@@ -13358,6 +13358,7 @@
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
+	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/ath11k-fix-netdev-open-race.patch
