--- a/series.conf
+++ b/series.conf
@@ -8813,6 +8813,7 @@
 	patches.suse/clk-imx8mn-Fix-imx8mn_clko1_sels.patch
 	patches.suse/clk-qcom-gcc-sc7280-Mark-gcc_cfg_noc_lpass_clk-alway.patch
 	patches.suse/clk-bm1880-remove-kfrees-on-static-allocations.patch
+	patches.suse/genirq-Provide-new-interfaces-for-affinity-hints.patch
 	patches.suse/scsi-lpfc-Use-irq_set_affinity.patch
 	patches.suse/irqchip-gic-v4-Disable-redistributors-view-of-the-VP.patch
 	patches.suse/clocksource-drivers-exynos_mct-Refactor-resources-al.patch
