--- a/series.conf
+++ b/series.conf
@@ -8243,6 +8243,7 @@
 	patches.suse/ixgbevf-Rename-MSGTYPE-to-SUCCESS-and-FAILURE.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
 	patches.suse/ethtool-add-support-to-set-get-rx-buf-len-via-ethtoo.patch
+	patches.suse/ethtool-extend-ringparam-setting-getting-API-with-rx.patch
 	patches.suse/msft-hv-2484-net-mana-Add-XDP-support.patch
 	patches.suse/msft-hv-2485-hv_netvsc-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/devlink-Add-enable_iwarp-generic-device-param.patch
