gpio: pca953x: Add mutex_lock for regcache sync in PM (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14069,6 +14069,7 @@
 	patches.suse/tty-n_gsm-avoid-call-of-sleeping-functions-from-atom.patch
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
+	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
