--- a/series.conf
+++ b/series.conf
@@ -56803,6 +56803,7 @@
 	patches.suse/mm-memcontrol-fix-potential-oom_lock-recursion-deadlock.patch
 	patches.suse/vfio-ccw-Remove-UUID-from-s390-debug-log
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
+	patches.suse/ASoC-mt6797-mt6351-Fix-refcount-leak-in-mt6797_mt635.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NV45PZ.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-HP-Spectre-x360-15-eb.patch
 	patches.suse/iommu-exynos-Handle-failed-IOMMU-device-registration-properly
