ACPI: EC: Remove duplicate ThinkPad X1 Carbon 6th entry from DMI quirks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56555,6 +56555,7 @@
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
+	patches.suse/ACPI-EC-Remove-duplicate-ThinkPad-X1-Carbon-6th-entr.patch
 	patches.suse/ACPI-video-Force-backlight-native-for-some-TongFang-.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
