ASoC: codecs: wcd9335: move gains from SX_TLV to S8_TLV (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56806,6 +56806,7 @@
 	patches.suse/ASoC-mt6797-mt6351-Fix-refcount-leak-in-mt6797_mt635.patch
 	patches.suse/ASoC-codecs-da7210-add-check-for-i2c_add_driver.patch
 	patches.suse/ASoC-codecs-msm8916-wcd-digital-move-gains-from-SX_T.patch
+	patches.suse/ASoC-codecs-wcd9335-move-gains-from-SX_TLV-to-S8_TLV.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NV45PZ.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-HP-Spectre-x360-15-eb.patch
 	patches.suse/iommu-exynos-Handle-failed-IOMMU-device-registration-properly
