ALSA: hda/realtek: fix right sounds and mute/micmute LEDs for HP machine (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55882,6 +55882,7 @@
 	patches.suse/ALSA-wavefront-Proper-check-of-get_user-error.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-the-Framework-Laptop.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-TongFang-devices-with.patch
+	patches.suse/ALSA-hda-realtek-fix-right-sounds-and-mute-micmute-L-024a7ad9eb4d.patch
 	patches.suse/ALSA-usb-audio-Restore-Rane-SL-1-quirk.patch
 	patches.suse/Fix-double-fget-in-vhost_net_set_backend.patch
 	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
