--- a/series.conf
+++ b/series.conf
@@ -56878,6 +56878,7 @@
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
+	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 
 	# mkp/scsi queue
