ASoC: tas2770: Allow mono streams (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56871,6 +56871,7 @@
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
+	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
