--- a/series.conf
+++ b/series.conf
@@ -56717,6 +56717,7 @@
 	patches.suse/clk-qcom-ipq8074-SW-workaround-for-UBI32-PLL-lock.patch
 	patches.suse/clk-qcom-ipq8074-fix-NSS-port-frequency-tables.patch
 	patches.suse/clk-qcom-ipq8074-set-BRANCH_HALT_DELAY-flag-for-UBI-.patch
+	patches.suse/clk-qcom-ipq8074-dont-disable-gcc_sleep_clk_src.patch
 	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
 	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
 	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
