ACPI: LPSS: Fix missing check in register_device_clock() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56557,6 +56557,7 @@
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
 	patches.suse/ACPI-EC-Remove-duplicate-ThinkPad-X1-Carbon-6th-entr.patch
 	patches.suse/ACPI-PM-save-NVS-memory-for-Lenovo-G40-45.patch
+	patches.suse/ACPI-LPSS-Fix-missing-check-in-register_device_clock.patch
 	patches.suse/ACPI-video-Force-backlight-native-for-some-TongFang-.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
