--- a/series.conf
+++ b/series.conf
@@ -56873,6 +56873,7 @@
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
 	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
+	patches.suse/ata-libata-eh-Add-missing-command-name.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
