clk: rockchip: add sclk_mac_lbtest to rk3188_critical_clocks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -42039,6 +42039,7 @@
 	patches.suse/clk-bcm2835-do-not-use-prediv-with-bcm2711-s-plls.patch
 	patches.suse/clk-actions-Fix-h_clk-for-Actions-S500-SoC.patch
 	patches.suse/clk-rockchip-Revert-fix-wrong-mmc-sample-phase-shift.patch
+	patches.suse/clk-rockchip-add-sclk_mac_lbtest-to-rk3188_critical_.patch
 	patches.suse/clk-iproc-round-clock-rate-to-the-closest.patch
 	patches.suse/clk-tegra-pll-Improve-PLLM-enable-state-detection.patch
 	patches.suse/clk-clk-atlas6-fix-return-value-check-in-atlas6_clk_.patch
