--- a/series.conf
+++ b/series.conf
@@ -56804,6 +56804,7 @@
 	patches.suse/vfio-ccw-Remove-UUID-from-s390-debug-log
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
 	patches.suse/ASoC-mt6797-mt6351-Fix-refcount-leak-in-mt6797_mt635.patch
+	patches.suse/ASoC-codecs-da7210-add-check-for-i2c_add_driver.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NV45PZ.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-HP-Spectre-x360-15-eb.patch
 	patches.suse/iommu-exynos-Handle-failed-IOMMU-device-registration-properly
