--- a/series.conf
+++ b/series.conf
@@ -56609,6 +56609,7 @@
 	patches.suse/drm-nouveau-fix-another-off-by-one-in-nvbios_addr.patch
 	patches.suse/virtio-gpu-fix-a-missing-check-to-avoid-NULL-derefer.patch
 	patches.suse/drm-adv7511-override-i2c-address-of-cec-before-acces.patch
+	patches.suse/fbcon-Fix-boundary-checks-for-fbcon-vc-n1-n2-paramet.patch
 	patches.suse/drm-bridge-adv7511-Add-check-for-mipi_dsi_driver_reg.patch
 	patches.suse/drm-mcde-Fix-refcount-leak-in-mcde_dsi_bind.patch
 	patches.suse/drm-doc-Fix-comment-typo.patch
