drm/meson: Fix refcount bugs in meson_vpu_has_available_connectors() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56876,6 +56876,7 @@
 	patches.suse/scsi-lpfc-Check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
+	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
 	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
