--- a/series.conf
+++ b/series.conf
@@ -56711,6 +56711,7 @@
 	patches.suse/USB-Follow-up-to-SPDX-identifiers-addition-remove-no.patch
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-BNDCFGS-for-nested_ru.patch
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-DEBUGCTL-for-nested_r.patch
+	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/platform-olpc-Fix-uninitialized-data-in-debugfs-writ.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
