dmaengine: sprd: Cleanup in .remove() after pm_runtime_get_sync() failed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56723,6 +56723,7 @@
 	patches.suse/clk-qcom-ipq8074-set-BRANCH_HALT_DELAY-flag-for-UBI-.patch
 	patches.suse/clk-qcom-ipq8074-dont-disable-gcc_sleep_clk_src.patch
 	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
+	patches.suse/dmaengine-sprd-Cleanup-in-.remove-after-pm_runtime_g.patch
 	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
 	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
 	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
