drm/amdgpu: Check BO's requested pinning domains against its preferred_domains (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56631,6 +56631,7 @@
 	patches.suse/drm-msm-hdmi-enable-core-vcc-core-vdda-supply-for-89.patch
 	patches.suse/drm-msm-mdp5-Fix-global-state-lock-backoff.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
+	patches.suse/drm-amdgpu-Check-BO-s-requested-pinning-domains-agai.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
 	patches.suse/misc-rtsx-Fix-an-error-handling-path-in-rtsx_pci_pro.patch
