--- a/series.conf
+++ b/series.conf
@@ -56878,6 +56878,7 @@
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
+	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
 	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
