--- a/series.conf
+++ b/series.conf
@@ -56702,6 +56702,7 @@
 	patches.suse/usb-ohci-nxp-Fix-refcount-leak-in-ohci_hcd_nxp_probe.patch
 	patches.suse/usb-xhci-tegra-Fix-error-check.patch
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
+	patches.suse/gadgetfs-ep_io-wait-until-IRQ-finishes.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
 	patches.suse/usb-dwc3-qcom-fix-missing-optional-irq-warnings.patch
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
