--- a/series.conf
+++ b/series.conf
@@ -56639,6 +56639,7 @@
 	patches.suse/intel_th-msu-sink-Potential-dereference-of-null-poin.patch
 	patches.suse/intel_th-msu-Fix-vmalloced-buffers.patch
 	patches.suse/intel_th-pci-Add-Meteor-Lake-P-support.patch
+	patches.suse/intel_th-pci-Add-Raptor-Lake-S-PCH-support.patch
 	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-accel-sca3000-Fix-alignment-for-DMA-safety.patch
