--- a/series.conf
+++ b/series.conf
@@ -56844,6 +56844,7 @@
 	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 	patches.suse/video-fbdev-s3fb-Check-the-size-of-screen-before-mem.patch
 	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
+	patches.suse/lib-list_debug.c-Detect-uninitialized-lists.patch
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/iommu-vt-d-avoid-invalid-memory-access-via-node_online-NUMA_NO_N
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
