--- a/series.conf
+++ b/series.conf
@@ -56717,6 +56717,7 @@
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
+	patches.suse/HID-alps-Declare-U1_UNICORN_LEGACY-support.patch
 	patches.suse/platform-olpc-Fix-uninitialized-data-in-debugfs-writ.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
