--- a/series.conf
+++ b/series.conf
@@ -56823,6 +56823,7 @@
 	patches.suse/ASoC-audio-graph-card-Add-of_node_put-in-fail-path.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-HP-Spectre-x360-15-eb.patch
 	patches.suse/mfd-t7l66xb-Drop-platform-disable-callback.patch
+	patches.suse/mfd-max77620-Fix-refcount-leak-in-max77620_initialis.patch
 	patches.suse/iommu-exynos-Handle-failed-IOMMU-device-registration-properly
 	patches.suse/iommu-arm-smmu-qcom_iommu-Add-of_node_put-when-breaking-out-of-l
 	patches.suse/iommu-amd-Simplify-and-Consolidate-Virtual-APIC-AVIC-Enablement
