i2c: imx: Make sure to unregister adapter on remove() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56892,6 +56892,7 @@
 	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
 	patches.suse/mmc-pxamci-Fix-an-error-handling-path-in-pxamci_prob.patch
 	patches.suse/ata-libata-eh-Add-missing-command-name.patch
+	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
