--- a/series.conf
+++ b/series.conf
@@ -56731,6 +56731,7 @@
 	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
 	patches.suse/dmaengine-sprd-Cleanup-in-.remove-after-pm_runtime_g.patch
 	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
+	patches.suse/PCI-Add-ACS-quirk-for-Broadcom-BCM5750x-NICs.patch
 	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
 	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
