--- a/series.conf
+++ b/series.conf
@@ -56817,6 +56817,7 @@
 	patches.suse/mtd-maps-Fix-refcount-leak-in-of_flash_probe_versati.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-ap_flash_init.patch
 	patches.suse/mtd-sm_ftl-Fix-deadlock-caused-by-cancel_work_sync-i.patch
+	patches.suse/mtd-partitions-Fix-refcount-leak-in-parse_redboot_of.patch
 	patches.suse/mm-memcontrol-fix-potential-oom_lock-recursion-deadlock.patch
 	patches.suse/vfio-ccw-Remove-UUID-from-s390-debug-log
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
