mtd: maps: Fix refcount leak in ap_flash_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56815,6 +56815,7 @@
 	patches.suse/jbd2-fix-assertion-jh-b_frozen_data-NULL-failure-whe.patch
 	patches.suse/drm-meson-Fix-overflow-implicit-truncation-warnings.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-of_flash_probe_versati.patch
+	patches.suse/mtd-maps-Fix-refcount-leak-in-ap_flash_init.patch
 	patches.suse/mm-memcontrol-fix-potential-oom_lock-recursion-deadlock.patch
 	patches.suse/vfio-ccw-Remove-UUID-from-s390-debug-log
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
