--- a/series.conf
+++ b/series.conf
@@ -56713,6 +56713,7 @@
 	patches.suse/usb-xhci-tegra-Fix-error-check.patch
 	patches.suse/usb-gadget-uvc-call-uvc-uvcg_warn-on-completed-statu.patch
 	patches.suse/usb-host-ohci-ppc-of-Fix-refcount-leak-bug.patch
+	patches.suse/usb-renesas-Fix-refcount-leak-bug.patch
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/gadgetfs-ep_io-wait-until-IRQ-finishes.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
