video: fbdev: i740fb: Check the argument of i740_calc_vclk() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56858,6 +56858,7 @@
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
 	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
 	patches.suse/video-fbdev-arkfb-Fix-a-divide-by-zero-bug-in-ark_se.patch
+	patches.suse/video-fbdev-i740fb-Check-the-argument-of-i740_calc_v.patch
 	patches.suse/video-fbdev-vt8623fb-Check-the-size-of-screen-before.patch
 	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 	patches.suse/video-fbdev-s3fb-Check-the-size-of-screen-before-mem.patch
