spi: synquacer: Add missing clk_disable_unprepare() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56553,6 +56553,7 @@
 	patches.suse/firmware-tegra-bpmp-Do-only-aligned-access-to-IPC-me.patch
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
 	patches.suse/regulator-of-Fix-refcount-leak-bug-in-of_get_regulat.patch
+	patches.suse/spi-synquacer-Add-missing-clk_disable_unprepare.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
