misc: fastrpc: fix memory corruption on probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56936,6 +56936,7 @@
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
 	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
+	patches.suse/misc-fastrpc-fix-memory-corruption-on-probe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
