usb: gadget: udc-xilinx: replace memcpy with memcpy_toio (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56931,6 +56931,7 @@
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
+	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
