clk: bcm: rpi: Fix error handling of raspberrypi_fw_get_rate (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56946,6 +56946,7 @@
 	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
 	patches.suse/clk-core-Fix-runtime-PM-sequence-in-clk_core_unprepa.patch
+	patches.suse/clk-bcm-rpi-Fix-error-handling-of-raspberrypi_fw_get.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
