drm/msm/dsi: Fix number of regulators for msm8996_dsi_cfg (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56941,6 +56941,7 @@
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-msm-dsi-fix-the-inconsistent-indenting.patch
+	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
