usb: typec: altmodes/displayport: correct pin assignment for UFP receptacles (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56929,6 +56929,7 @@
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
+	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
