iio: adc: mcp3911: use correct formula for AD conversion (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56935,6 +56935,7 @@
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
+	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
